Fixed overlap of nav-links with other content in certain screen sizes

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -163,7 +163,7 @@ body.td-404 main .error-details {
     margin-top: 3.5rem !important;
   }
 
-  @media only screen and (min-width: 1075px) {
+  @media only screen and (min-width: 1170px) {
     margin-top: 1rem !important;
   }
 }
